# SentenecepieceForAndroid

./: README.md  settings.gradle.kts
android-sentenecepiece/: README.md  build.gradle.kts
android-sentenecepiece/src/main/cpp/: CMakeLists.txt  spm_jni.cpp
android-sentenecepiece/src/main/java/com/sharpcj/sentenecepiece/: SpmNative.kt
app/: README.md  build.gradle.kts
app/src/androidTest/java/com/sharpcj/sentenecepiece/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sharpcj/sentenecepiece/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/sharpcj/sentenecepiece/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
tcl-sentenecepiece/: README.md  RESOURCE_MANAGEMENT.md  build.gradle.kts
tcl-sentenecepiece/src/main/cpp/: spm_jni.cpp
tcl-sentenecepiece/src/main/java/com/tcl/sentenecepiece/: SpmNative.kt
